examples-generated/namespaced/inference/v1alpha1/gateway.yaml
apiVersion: inference.coreweave.m.crossplane.io/v1alpha1
kind: Gateway
metadata:
  annotations:
    meta.upbound.io/example-id: inference/v1alpha1/gateway
  labels:
    testing.upbound.io/example-name: example
  name: example
  namespace: crossplane-system
spec:
  forProvider:
    auth:
      coreweave: {}
    name: my-gateway
    routing:
      bodyBased:
        apiType: API_TYPE_OPENAI
    zones:
    - US-EAST-04A
